--- a/index.html
+++ b/index.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title></title>
-  <style type="text/css">
-    *{
-      margin: 0;
-      padding:0;
-      box-sizing: border-box;
-    }
-    .header h1{
-      width: 100%;
-      text-align: center;
-      margin-left: 25px;
-      padding: 20px;
-      font-family: cursive;
-      background-color:#181818;
-      color:  white;
-    }
-    #drop{
-      margin: 25px;
-    }
-    .profile{
-      margin-left:35px;
-    }
-    .back-img{
-      background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(27009665-restaurant-wallpapers-1.jpg);
-      width: 100%;
-      height: 750px;
-      background-size: cover;
-      background-position: center;  
-      align-items: center;  
-    }
-    .panel-title{
-      padding:20px;
-    }
-    .center{
-      align-items: center;
-    }
-  </style>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="lib.js"></script>
-  <script defer="true" src="script.js"></script>
-</head>
-<body>
-<div class="back-img">
-  <div class="container">
-  <div class="header">
-    <h1>Yogesh's Resto</h1>
-  </div>
-  <select id="drop" class="form-control"> 
-    <option>Select any Item</option>
-  </select>
-  <br>
-  <br>
-  <div class="profile"></div>
-</div>
-</div>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Lab Practical No. 3: jQuery</title>
+    <link href="css/style.css" rel = "stylesheet"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  </head>
+  <body>
+  <header>
+    <nav class="navbar navbar-light" style="background-color: #808000;">
+      <a class="navbar-brand" href="#">
+        <ul>Menu Table</ul>
+      </a>
+    </nav>
+    <div class="cont">
+      <i class="fas fa-h1">Select your favouraite menu</i>
+    </div>
+    <br>
+    <div class="container">
+      <select name="item restaurant-dropdown restaurant" class="custom-select custom-select-lg mb-3" id="restaurant">
+        <option value="">Select Menu</option>
+    </select>
+    <br>
+  
+    <table id="tabl" class="table tab">
+      <tr>
+        <th>ID</th>
+        <td id="id"></td>
+      </tr>
+      <tr>
+        <th>Name</th>
+        <td id="menuname"></td>
+      </tr>
+      <tr>
+        <th>Short Name</th>
+        <td id="sname"></td>
+      </tr>
+      <tr>
+        <th>Description</th>
+        <td id="descp"></td>
+      </tr>
+      <tr>
+        <th>Price Small</th>
+        <td id="psmall"></td>
+      </tr>
+      <tr>
+        <th>Price Large</th>
+        <td id="plarge"></td>
+      </tr>
+    </table>
+  
 
-</body>
+    </div>
+    </header>
+
+    <script src="lib/jquery-3.5.1.min.js"></script>
+    <script src="script.js" defer></script>
+
+  </body>
 </html>
